--- a/index.html
+++ b/index.html
@@ -5,53 +5,53 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
-  <div class="aaa">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="centered-main-page-element">
+<body class="page-body">
+  <article class="additional-info">
+    <img class="additional-info-image" src="./eisenhower-matrix.jpg">
+    <a class="additional-info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  </article>
+  <main class="page-main">
     <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
+      <label class="heading label-heading" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+        <input id="new-task" class="task-input" type="text">
+        <button class="button">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+    <h3 class="heading">Todo</h3>
+    <ul id="incompleted-tasks">
+      <li class="task-item">
+        <input type="checkbox" class="task-check">
+        <label class="task-name">Pay Bills</label>
+        <input type="text" class="task-input">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
+          <img class="delete-icon" src="./remove.svg">
         </button>
       </li>
-      <li class="editMode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
+      <li class="edit-mode task-item">
+        <input type="checkbox" class="task-check">
+        <label class="task-name">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task-input">
+        <button class="button edit">Save</button>
+        <button class="button delete">
+          <img class="delete-icon" src="./remove.svg">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="heading">Completed</h3>
     <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+      <li class="task-item">
+        <input type="checkbox" class="task-check" checked>
+        <label class="task-name">See the Doctor</label>
+        <input type="text" class="task-input">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
+          <img class="delete-icon" src="./remove.svg">
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
