--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page-body">
     <article class="additional-info">
-      <img class="additional-info-image" src="./eisenhower-matrix.jpg">
+      <img class="additional-info-image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="additional-info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </article>
     <main class="page-main">
@@ -26,7 +26,7 @@
           <input type="text" class="task-input">
           <button class="button edit">Edit</button>
           <button class="button delete">
-            <img class="delete-icon" src="./remove.svg">
+            <img class="delete-icon" src="./remove.svg" alt="">
           </button>
         </li>
         <li class="edit-mode task-item">
@@ -35,7 +35,7 @@
           <input type="text" value="Go Shopping" class="task-input">
           <button class="button edit">Save</button>
           <button class="button delete">
-            <img class="delete-icon" src="./remove.svg">
+            <img class="delete-icon" src="./remove.svg" alt="">
           </button>
         </li>
       </ul>
@@ -47,7 +47,7 @@
           <input type="text" class="task-input">
           <button class="button edit">Edit</button>
           <button class="button delete">
-            <img class="delete-icon" src="./remove.svg">
+            <img class="delete-icon" src="./remove.svg" alt="">
           </button>
         </li>
       </ul>
